core/perf/comparison/libzlink/libzlink_dist/include/zlink.h

typedef void (zlink_free_fn) (void *data_, void *hint_);
typedef unsigned __int64 zlink_fd_t;
typedef unsigned int zlink_fd_t;
typedef int zlink_fd_t;
typedef struct zlink_pollitem_t
{
    void *socket;
    zlink_fd_t fd;
    short events;
    short revents;
} zlink_pollitem_t;
ZLINK_EXPORT int zlink_poll (zlink_pollitem_t *items_, int nitems_, long timeout_);
/******************************************************************************/
/*  Message proxying                                                          */
/******************************************************************************/

ZLINK_EXPORT int zlink_proxy (void *frontend_, void *backend_, void *capture_);
ZLINK_EXPORT int zlink_proxy_steerable (void *frontend_,
                                    void *backend_,
                                    void *capture_,
                                    void *control_);
ZLINK_EXPORT int zlink_has (const char *capability_);
typedef void (zlink_timer_fn) (int timer_id, void *arg);
/*  Sleeps for specified number of seconds.                                   */
ZLINK_EXPORT void zlink_sleep (int seconds_);
typedef void (zlink_thread_fn) (void *);
typedef struct zlink_poller_event_t
{
    void *socket;
    zlink_fd_t fd;
    void *user_data;
    short events;
} zlink_poller_event_t;
ZLINK_EXPORT void *zlink_poller_new (void);
ZLINK_EXPORT int zlink_poller_destroy (void **poller_p);
ZLINK_EXPORT int zlink_poller_size (void *poller);
ZLINK_EXPORT int
zlink_poller_add (void *poller, void *socket, void *user_data, short events);
ZLINK_EXPORT int zlink_poller_modify (void *poller, void *socket, short events);
ZLINK_EXPORT int zlink_poller_remove (void *poller, void *socket);
ZLINK_EXPORT int zlink_poller_wait_all (void *poller,
                                    zlink_poller_event_t *events,
                                    int n_events,
                                    long timeout);
ZLINK_EXPORT int
zlink_poller_add_fd (void *poller, zlink_fd_t fd, void *user_data, short events);
ZLINK_EXPORT int zlink_poller_modify_fd (void *poller, zlink_fd_t fd, short events);
ZLINK_EXPORT int zlink_poller_remove_fd (void *poller, zlink_fd_t fd);